update swagger doc add folder and recurcive folder output
