# internal/models/models.go
@@ -9,21 +9,14 @@ type User struct {
 	CreatedAt time.Time `json:"created_at" db:"created_at"`
 }
 
-type File struct {
-	ID         string    `json:"id" db:"id"`
-	Name       string    `json:"name" db:"name"`
-	Path       string    `json:"path" db:"path"`
-	Size       int64     `json:"size" db:"size"`
-	Username   string    `json:"username" db:"username"`
-	UploadedAt time.Time `json:"uploaded_at" db:"uploaded_at"`
-}
-
 type FileResponse struct {
 	ID          string    `json:"id"`
 	Name        string    `json:"name"`
 	Size        int64     `json:"size"`
+	Path        string    `json:"path,omitempty"`
 	DownloadURL string    `json:"download_url,omitempty"`
 	UploadedAt  time.Time `json:"uploaded_at"`
+	FolderID    string    `json:"folder_id,omitempty"`
 }
 
 type ErrorResponse struct {
