# internal/transport/rest/contracts.go
@@ -7,10 +7,16 @@ import (
 )
 
 type StorageService interface {
-	UploadFile(username, filename string, content io.Reader, size int64) (*models.File, error)
+	CreateFolder(username, folderName, parentID string) (*models.Folder, error)
+	UploadFile(username, filename string, content io.Reader, size int64, folderID string) (*models.File, error)
+	DownloadFilesAsZip(username string) (io.ReadSeekCloser, error)
+	DownloadFolderAsZip(folderID string) (io.ReadSeekCloser, error)
 	DownloadFile(id string) (io.ReadSeekCloser, *models.File, error)
+	DeleteFile(username, fileID string) error
 	ListFiles(username string) ([]*models.File, error)
 	GetFileDownloadURL(fileID string) (string, error)
+	GetFolderContent(id string) (*models.Folder, error)
+	GetRootFolder(username string) (*models.Folder, error)
 }
 
 type UserService interface {
